랜딩페이지 메타태그 설정

--- a/signin/index.html
+++ b/signin/index.html
@@ -11,8 +11,8 @@
   <main class="signin-layout">
     <div class="signin__gap">
       <header class="signin-header">
-        <a href="../"><img src="../icons/logo.svg" class="logo" alt="링크브러리 로고"></a>
-        <div class="signin-header__sign-up-massage">회원이 아니신가요?<a href="../signup/index.html" class="sign-up-btn">회원 가입하기</a></div>
+        <a href="/"><img src="/icons/logo.svg" class="logo" alt="링크브러리 로고"></a>
+        <div class="signin-header__sign-up-massage">회원이 아니신가요?<a href="/signup/index.html" class="sign-up-btn">회원 가입하기</a></div>
       </header>
       <form class="signin-form">
         <div class="signin-form__group">
@@ -25,7 +25,7 @@
             <div class="signin-form__password-input">
               <input id="password" name="password" type="password">
               <button class="signin-form__password-toggle-btn">
-                <img src="../icons/eye-on.svg" class="signin-form__password-icon" alt="비밀번호 보기"></i>
+                <img src="/icons/eye-on.svg" class="signin-form__password-icon" alt="비밀번호 보기"></i>
               </button>
             </div>
           </div>
@@ -38,14 +38,14 @@
       <div class="social-signin__icons">
         <a href="https://www.google.com/">
           <div class="social-signin__icon">
-            <img src="../icons/google.svg" class="social-signin__background" alt="구글 계정연동하기">
-            <img src="../icons/c3a9be9cb365010056fa7aa9cc9f05a2.png" class="gooole-icon">
+            <img src="/icons/google.svg" class="social-signin__background" alt="구글 계정연동하기">
+            <img src="/icons/c3a9be9cb365010056fa7aa9cc9f05a2.png" class="gooole-icon">
           </div>
         </a>
         <a href="https://www.kakaocorp.com/page/">
           <div class="social-signin__icon">
-            <img src="../icons/facebook.svg" class="social-signin__background" alt="카카토톡 계정연동하기">
-            <img src="../icons/99FE484C5C3451F218 1.svg" class="kakao-icon">
+            <img src="/icons/facebook.svg" class="social-signin__background" alt="카카토톡 계정연동하기">
+            <img src="/icons/99FE484C5C3451F218 1.svg" class="kakao-icon">
           </div>
         </a>
       </div>
