--- a/signup/index.html
+++ b/signup/index.html
@@ -11,8 +11,8 @@
   <main class="sign-up-layout">
     <div class="sign-up__gap">
       <header class="sign-up-header">
-        <a href="../"><img src="../icons/logo.svg" class="logo" alt="링크브러리 로고"></a>
-        <div class="sign-up-header__iogin-massage">이미 회원이신가요?<a href="../signin/index.html" class="login-btn">로그인하기</a></div>
+        <a href="/"><img src="/icons/logo.svg" class="logo" alt="링크브러리 로고"></a>
+        <div class="sign-up-header__iogin-massage">이미 회원이신가요?<a href="/signin/index.html" class="login-btn">로그인하기</a></div>
       </header>
       <form class="sign-up-form">
         <div class="sign-up-form__group">
@@ -47,14 +47,14 @@
       <div class="social-sign-up__icons">
         <a href="https://www.google.com/">
           <div class="social-sign-up__icon">
-            <img src="../icons/google.svg" class="social-sign-up__background" alt="구글 계정연동하기"> 
-            <img src="../icons/c3a9be9cb365010056fa7aa9cc9f05a2.png" class="gooole-icon">
+            <img src="/icons/google.svg" class="social-sign-up__background" alt="구글 계정연동하기"> 
+            <img src="/icons/c3a9be9cb365010056fa7aa9cc9f05a2.png" class="gooole-icon">
           </div>
         </a>
         <a href="https://www.kakaocorp.com/page/">
           <div class="social-sign-up__icon">
-            <img src="../icons/facebook.svg" class="social-sign-up__background" alt="카카토톡 계정연동하기">
-            <div class="social-sign-up__second"><img src="../icons/99FE484C5C3451F218 1.svg" class="kakao-icon"></div>
+            <img src="/icons/facebook.svg" class="social-sign-up__background" alt="카카토톡 계정연동하기">
+            <div class="social-sign-up__second"><img src="/icons/99FE484C5C3451F218 1.svg" class="kakao-icon"></div>
           </div>
         </a>
       </div>
