--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:image" content="/images/_img4.png">
+  <meta property="og:title" content="Linkbrary">
+  <meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요.">
+  <meta property="og:url" content="https://linkbrary-hakyoung.netlify.app/">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="/images/_img4.png">
+  <meta name="twitter:title" content="Linkbrary">
+  <meta name="twitter:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요.">
   <title>Linkbrary</title>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,8 +22,8 @@
   <header>
     <nav class="linkbrary-nav">
       <ul>
-        <li><a href="/"><img src="./icons/logo.svg" class="logo" alt="링크브러리 로고"></a></li>
-        <li><a href="./signin/index.html" class="signin-btn">로그인</a></li>
+        <li><a href="/"><img src="/icons/logo.svg" class="logo" alt="링크브러리 로고"></a></li>
+        <li><a href="/signin/index.html" class="signin-btn">로그인</a></li>
       </ul>
     </nav>
   </header>
@@ -26,7 +34,7 @@
         <span class="title-gradation">세상의 모든 정보</span>를</br>
         쉽게 저장하고 관리해 보세요
         </h1>
-        <a href="./signup/index.html" class="signup-btn">링크 추가하기</a>
+        <a href="/signup/index.html" class="signup-btn">링크 추가하기</a>
         <div class="linkbrary-section__preview">
           <img src="/images/_img.png" class="preview-img" alt="미리보기 사진">
         </div>
@@ -46,12 +54,12 @@
               한 공간에 저장하세요.
             </p>
           </div>
-            <img src="./images/_img1.png" class="section__img" alt="링크저장하기">
+            <img src="/images/_img1.png" class="section__img" alt="링크저장하기">
         </div>
       </div>
       <div class="section__wrap">
         <div class="section__card">
-          <img src="./images/img2.png" class="section__img" alt="폴더 이름 변경하기">
+          <img src="/images/img2.png" class="section__img" alt="폴더 이름 변경하기">
           <div class="section__frame">
             <h1>
             링크를 폴더로</br>
@@ -76,12 +84,12 @@
               공유해 보세요.
             </p>
           </div>
-          <img src="./images/img3.png" class="section__img" alt="폴더 공유하기">
+          <img src="/images/img3.png" class="section__img" alt="폴더 공유하기">
         </div>
       </div>
       <div class="section__wrap">
         <div class="section__card">
-          <img src="./images/_img4.png" class="section__img" alt="저장한 링크 검색하기">
+          <img src="/images/_img4.png" class="section__img" alt="저장한 링크 검색하기">
           <div class="section__frame">
             <h1>
               저장한 링크를</br>
