--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <me ta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Linkbrary</title>
     <link rel="stylesheet" href="main.style.css" />
+    <link rel="stylesheet" href="global.css" />
   </head>
   <body>
     <nav class="nav">
@@ -17,13 +18,13 @@
     </nav>
     <main>
       <section class="main">
-        <div class="main__description">
+        <h1 class="main__description">
           <span class="main--gradient">세상의 모든 정보</span
           ><span
             >를<br />
-            쉽게 저장하고 관리해 보세요</span
+            쉽게 저장하고 <br class="media__br" />관리해 보세요</span
           >
-        </div>
+        </h1>
         <div class="signup">
           <a class="signup__link" href="signup.html">링크 추가하기</a>
         </div>
@@ -32,7 +33,7 @@
         </div>
       </section>
       <section class="section save">
-        <div class="save__description">
+        <div class="description-section">
           <h2>
             <span class="save--gradient">원하는 링크</span>를<br />
             저장하세요
@@ -47,7 +48,7 @@
       </section>
       <section class="section">
         <img class="manage__image" src="./img/manage.png" alt="manage" />
-        <div class="manage-description">
+        <div class="description-section">
           <h2>
             링크를 폴더로<br />
             <span class="manage--gradient">관리</span>하세요.
@@ -59,7 +60,7 @@
         </div>
       </section>
       <section class="section share">
-        <div class="share__description">
+        <div class="description-section">
           <h2>
             저장한 링크를<br />
             <span class="share--gradient">공유</span>해 보세요.
@@ -74,7 +75,7 @@
       </section>
       <section class="section">
         <img class="search__img" src="./img/search.png" alt="search" />
-        <div class="search__description">
+        <div class="description-section">
           <h2>
             저장한 링크를<br />
             <span class="search--gradient">검색</span>해 보세요.
