--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -7,6 +7,7 @@
     <title>Linkbrary</title>
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/tablet.css">
     <link rel="stylesheet" href="/css/index-tablet.css">
     <link rel="stylesheet" href="/css/mobile.css">
