--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/landing.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Linkbrary</title>
@@ -10,7 +10,7 @@
     <header>
       <div class="header-box">
         <a href="/index.html">
-          <img class="logo" src="svgs/logo.svg" alt="logo" />
+          <img class="logo" src="svgs/logo.svg" alt="Linkbrary" />
         </a>
         <a href="signin.html">
           <div class="button white" style="width: 128px">
