feat: 3주차 미션 구현 완료(반응형)

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
   <html lang="ko">
   <head>
     <meta charset="UTF-8">
+    <meta property="og:image" content="/img-landing/img1">
+    <meta property="og:title" content="Linkbrary">
+    <meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요">
+    <meta property="og:url" content="https://www.codeit.kr">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,39 +28,39 @@
     <main class="container">
       <section class="top-section">
         <div class="top-section-title">
-        <h1 id="worldinformation">세상의 모든 정보<span>를<br>쉽게 저장하고 관리해 보세요</span></h1>
+        <h1 id="worldinformation">세상의 모든 정보<span>를<br>쉽게 저장하고<br class="br-mobile"> 관리해 보세요</span></h1>
         <a href="signup.html"><button class="btn-large">링크 추가하기</button></a>
         <img src="img-landing/img.png" alt="easily store and manage all the information in the world">
         </div>
       </section> 
       <section class="middle-section">
-        <div class="middle-section-content">
+        <div class="middle-section-content" id="middle-section-content-wantlink">
           <div class="middle-section-content-title">
-            <h1 id="wantlink">원하는 링크<span>를<br>저장하세요</span></h1>
-            <h5>나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br>사고 싶은 옷, 기억하고 싶은 모든 것을<br>한 공간에 저장하세요.</h5>
+            <h2 id="wantlink">원하는 링크<span>를 저장하세요</span></h2>
+            <h5>나중에 읽고 싶은 글, 다시 보고 싶은 영상,사고 싶은 옷, 기억하고 싶은 모든 것을 한 공간에 저장하세요.</h5>
           </div>
           <img src="img-landing/img1.png" alt="the link you want Save it">
         </div>
-        <div class="middle-section-content">
-          <img src="img-landing/img2.png" alt="link to a folder Take care of yourself">
+        <div class="middle-section-content" id="middle-section-content-management">
           <div class="middle-section-content-title">
-            <h1 id="management"><span>링크를 폴더로</span><br>관리<span>하세요</span></h1>
-            나만의 폴더를 무제한으로 만들고<br>다양하게 활용할 수 있습니다.</h5>
+            <h2 id="management"><span>링크를 폴더로</span>관리<span>하세요</span></h2>
+            나만의 폴더를 무제한으로 만들고 다양하게 활용할 수 있습니다.</h5>
           </div>
+          <img src="img-landing/img2.png" alt="link to a folder Take care of yourself">
         </div>
-        <div class="middle-section-content">
+        <div class="middle-section-content" id="middle-section-content-share">
           <div class="middle-section-content-title">
-            <h1 id="share"><span>저장한 링크를</span><br>공유<span>해 보세요.</span></h1>
-            <h5>여러 링크를 폴더에 담고 공유할 수 있습니다.<br>가족, 친구, 동료들에게 쉽고 빠르게 링크를<br>공유해 보세요.</h5>
+            <h2 id="share"><span>저장한 링크를</span>공유<span>해 보세요</span></h2>
+            <h5>여러 링크를 폴더에 담고 공유할 수 있습니다. 가족, 친구, 동료들에게 쉽고 빠르게 링크를 공유해 보세요.</h5>
           </div>
           <img src="img-landing/img3.png" alt="share your saved link">
         </div>
-        <div class="middle-section-content">
-          <img src="img-landing/img4.png" alt="search the link you saved">
+        <div class="middle-section-content" id="middle-section-content-search">
           <div class="middle-section-content-title">
-            <h1 id="search"><span>저장한 링크를</span><br>검색<span>해 보세요</span></h1>
+            <h2 id="search"><span>저장한 링크를 </span>검색<span>해 보세요</span></h2>
             <h5>중요한 정보들을 검색으로 쉽게 찾아보세요.</h5>
           </div>
+          <img src="img-landing/img4.png" alt="search the link you saved">
         </div>
       </section>
     </main>
