--- a/main.html
+++ b/main.html
@@ -33,55 +33,63 @@
         </div>
       </section>
       <section class="section save">
-        <div class="description-section">
-          <h2>
-            <span class="save--gradient">원하는 링크</span>를<br />
-            저장하세요
-          </h2>
-          <div class="description">
-            나중에 읽고 싶은 글. 다시 보고싶은 영상.<br />
-            사고싶은 옷. 기억하고 싶은 모든 것을<br />
-            한 공간에 저장하세요.
+        <div class="section__content--reverse">
+          <div class="description-section">
+            <h2>
+              <span class="save--gradient">원하는 링크</span>를<br />
+              저장하세요
+            </h2>
+            <div class="description">
+              나중에 읽고 싶은 글. 다시 보고싶은 영상.<br />
+              사고싶은 옷. 기억하고 싶은 모든 것을<br />
+              한 공간에 저장하세요.
+            </div>
           </div>
+          <img class="save__img" src="./img/save.png" alt="save" />
         </div>
-        <img class="save__img" src="./img/save.png" alt="save" />
       </section>
       <section class="section">
-        <img class="manage__image" src="./img/manage.png" alt="manage" />
-        <div class="description-section">
-          <h2>
-            링크를 폴더로<br />
-            <span class="manage--gradient">관리</span>하세요.
-          </h2>
-          <div class="description">
-            나만의 폴더를 무제한으로 만들고<br />
-            다양하게 활용할 수 있습니다.
+        <div class="section__content">
+          <img class="manage__image" src="./img/manage.png" alt="manage" />
+          <div class="description-section">
+            <h2>
+              링크를 폴더로<br />
+              <span class="manage--gradient">관리</span>하세요.
+            </h2>
+            <div class="description">
+              나만의 폴더를 무제한으로 만들고<br />
+              다양하게 활용할 수 있습니다.
+            </div>
           </div>
         </div>
       </section>
       <section class="section share">
-        <div class="description-section">
-          <h2>
-            저장한 링크를<br />
-            <span class="share--gradient">공유</span>해 보세요.
-          </h2>
-          <div class="description">
-            여러 링크를 폴더에 담고 공유할 수 있습니다.<br />
-            가족, 친구, 동료들에게 쉽고 빠르게 링크를<br />
-            공유해보세요.
+        <div class="section__content--reverse">
+          <div class="description-section">
+            <h2>
+              저장한 링크를<br />
+              <span class="share--gradient">공유</span>해 보세요.
+            </h2>
+            <div class="description">
+              여러 링크를 폴더에 담고 공유할 수 있습니다.<br />
+              가족, 친구, 동료들에게 쉽고 빠르게 링크를<br />
+              공유해보세요.
+            </div>
           </div>
+          <img class="share__img" src="./img/share.png" alt="share" />
         </div>
-        <img class="share__img" src="./img/share.png" alt="share" />
       </section>
       <section class="section">
-        <img class="search__img" src="./img/search.png" alt="search" />
-        <div class="description-section">
-          <h2>
-            저장한 링크를<br />
-            <span class="search--gradient">검색</span>해 보세요.
-          </h2>
-          <div class="description">
-            중요한 정보들을 검색으로 쉽게 찾아보세요.
+        <div class="section__content">
+          <img class="search__img" src="./img/search.png" alt="search" />
+          <div class="description-section">
+            <h2>
+              저장한 링크를<br />
+              <span class="search--gradient">검색</span>해 보세요.
+            </h2>
+            <div class="description">
+              중요한 정보들을 검색으로 쉽게 찾아보세요.
+            </div>
           </div>
         </div>
       </section>
