feat : Add additional meta tags for landing page

--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -4,6 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Linkbrary">
+    <meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요">
+    <meta property="og:image" content="https://t1.daumcdn.net/cfile/tistory/9959FF4D5E61E0A22E">
+    <meta property="og:url" content="https://linkbrary-bk.netlify.app/">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Linkbrary">
+    <meta name="twitter:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요">
+    <meta name="twitter:image" content="https://t1.daumcdn.net/cfile/tistory/9959FF4D5E61E0A22E">
     <title>Linkbrary</title>
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
