Chage section's display flex from grid

--- a/main.html
+++ b/main.html
@@ -32,8 +32,8 @@
           <img class="main__img" src="./img/main.png" alt="main" />
         </div>
       </section>
-      <section class="section save">
-        <div class="section__content--reverse">
+      <section class="section">
+        <div class="section__content">
           <div class="description-section">
             <h2>
               <span class="save--gradient">원하는 링크</span>를<br />
@@ -64,7 +64,7 @@
         </div>
       </section>
       <section class="section share">
-        <div class="section__content--reverse">
+        <div class="section__content">
           <div class="description-section">
             <h2>
               저장한 링크를<br />
