--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta property="og:image" content="/img-landing/img1">
     <meta property="og:title" content="Linkbrary">
     <meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요">
-    <meta property="og:url" content="https://www.codeit.kr">
+    <meta property="og:url" content="https://ubiquitous-biscotti-d49ea7.netlify.app/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
