--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="linkbrary-nav">
       <ul>
         <li><a href="/"><img src="/icons/logo.svg" class="logo" alt="링크브러리 로고"></a></li>
-        <li><a href="/signin/index.html" class="signin-btn">로그인</a></li>
+        <li><a href="/signin.html" class="signin-btn">로그인</a></li>
       </ul>
     </nav>
   </header>
@@ -34,7 +34,7 @@
         <span class="title-gradation">세상의 모든 정보</span>를</br>
         쉽게 저장하고 관리해 보세요
         </h1>
-        <a href="/signup/index.html" class="signup-btn">링크 추가하기</a>
+        <a href="/signup.html" class="signup-btn">링크 추가하기</a>
         <div class="linkbrary-section__preview">
           <img src="/images/_img.png" class="preview-img" alt="미리보기 사진">
         </div>
@@ -58,8 +58,7 @@
         </div>
       </div>
       <div class="section__wrap">
-        <div class="section__card">
-          <img src="/images/img2.png" class="section__img" alt="폴더 이름 변경하기">
+        <div class="section__card reverse">
           <div class="section__frame">
             <h1>
             링크를 폴더로</br>
@@ -70,6 +69,7 @@
               다양하게 활용할 수 있습니다.
             </p>
           </div>
+          <img src="/images/img2.png" class="section__img" alt="폴더 이름 변경하기">
         </div>
       </div>
       <div class="section__wrap">
@@ -88,8 +88,7 @@
         </div>
       </div>
       <div class="section__wrap">
-        <div class="section__card">
-          <img src="/images/_img4.png" class="section__img" alt="저장한 링크 검색하기">
+        <div class="section__card reverse">
           <div class="section__frame">
             <h1>
               저장한 링크를</br>
@@ -98,6 +97,7 @@
             <p>중요한 정보들을 검색으로 쉽게 찾아보세요.
             </p>
           </div>
+          <img src="/images/_img4.png" class="section__img" alt="저장한 링크 검색하기">
         </div>
       </div>
     </section>
