Complete section part

--- a/main.html
+++ b/main.html
@@ -36,7 +36,9 @@
         <div class="section__content">
           <div class="description-section">
             <h2>
-              <span class="save--gradient">원하는 링크</span>를<br />
+              <span class="save--gradient">원하는 링크</span>를<br
+                class="none"
+              />
               저장하세요
             </h2>
             <div class="description">
@@ -45,12 +47,12 @@
               한 공간에 저장하세요.
             </div>
           </div>
-          <img class="save__img" src="./img/save.png" alt="save" />
+          <img class="section-img" src="./img/save.png" alt="save" />
         </div>
       </section>
       <section class="section">
-        <div class="section__content">
-          <img class="manage__image" src="./img/manage.png" alt="manage" />
+        <div class="section__content reverse">
+          <img class="section-img" src="./img/manage.png" alt="manage" />
           <div class="description-section">
             <h2>
               링크를 폴더로<br />
@@ -63,7 +65,7 @@
           </div>
         </div>
       </section>
-      <section class="section share">
+      <section class="section">
         <div class="section__content">
           <div class="description-section">
             <h2>
@@ -76,12 +78,12 @@
               공유해보세요.
             </div>
           </div>
-          <img class="share__img" src="./img/share.png" alt="share" />
+          <img class="section-img" src="./img/share.png" alt="share" />
         </div>
       </section>
       <section class="section">
-        <div class="section__content">
-          <img class="search__img" src="./img/search.png" alt="search" />
+        <div class="section__content reverse">
+          <img class="section-img" src="./img/search.png" alt="search" />
           <div class="description-section">
             <h2>
               저장한 링크를<br />
