--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
   <body>
     <nav>
       <div class="gnb">
-        <a href="index.html">
+        <a class="logo" href="index.html">
           <img src="./images/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
         </a>
-        <a class="cta cta-short" href="signin.html">
+        <a class="login-btn cta cta-short" href="signin.html">
           <span>로그인</span>
         </a>
       </div>
