feat: pretendard 링크 추가

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Linkbrary</title>
     <link rel="stylesheet" href="styles/index.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
+    />
   </head>
   <body>
     <!--로고와 로그인 링크를 담고 있는 nav-->
@@ -18,7 +23,8 @@
     <header>
       <div class="header-contents">
         <h1 class="header-title">
-          <span class="header-title-gradient">세상의 모든 정보</span>를<br />
+          <span class="header-title-gradient">세상의 모든 정보</span>를
+          <br />
           쉽게 저장하고 관리해 보세요
         </h1>
         <a href="signup.html" class="header-link add">링크 추가하기</a>
@@ -33,6 +39,22 @@
     <!--main-->
     <main>
       <!--원하는 링크를 저장하는 설명의 section-01-->
+      <div class="flexbox">
+        <h2>
+          <span class="gradient-01 background-clip">원하는 링크</span>를<br />
+          저장하세요
+        </h2>
+        <p>
+          나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br />
+          사고 싶은 옷, 기억하고 싶은 모든 것을<br />
+          한 공간에 저장하세요.
+        </p>
+        <img
+          src="img/contents-01.png"
+          alt="링크 저장하는 이미지"
+          class="contents-img"
+        />
+      </div>
       <section>
         <div class="description">
           <h2>
