Feat: 심화 학습 구현완료- 모바일 랜딩페이지 이미지 위치 변경

--- a/index.html
+++ b/index.html
@@ -37,30 +37,34 @@
         <div class="middle-section-content" id="middle-section-content-wantlink">
           <div class="middle-section-content-title">
             <h2 id="wantlink">원하는 링크<span>를 저장하세요</span></h2>
+            <img src="img-landing/img1.png" class="middle-section-content-img-mobile" alt="the link you want Save it">
             <h5>나중에 읽고 싶은 글, 다시 보고 싶은 영상,사고 싶은 옷, 기억하고 싶은 모든 것을 한 공간에 저장하세요.</h5>
           </div>
-          <img src="img-landing/img1.png" alt="the link you want Save it">
+          <img src="img-landing/img1.png" class="middle-section-content-img-pc" alt="the link you want Save it">
         </div>
         <div class="middle-section-content" id="middle-section-content-management">
           <div class="middle-section-content-title">
             <h2 id="management"><span>링크를 폴더로</span>관리<span>하세요</span></h2>
-            나만의 폴더를 무제한으로 만들고 다양하게 활용할 수 있습니다.</h5>
+            <img src="img-landing/img2.png" class="middle-section-content-img-mobile" alt="link to a folder Take care of yourself">
+            <h5>나만의 폴더를 무제한으로 만들고 다양하게 활용할 수 있습니다.</h5>
           </div>
-          <img src="img-landing/img2.png" alt="link to a folder Take care of yourself">
+          <img src="img-landing/img2.png" class="middle-section-content-img-pc" alt="link to a folder Take care of yourself">
         </div>
         <div class="middle-section-content" id="middle-section-content-share">
           <div class="middle-section-content-title">
             <h2 id="share"><span>저장한 링크를</span>공유<span>해 보세요</span></h2>
+            <img src="img-landing/img3.png" class="middle-section-content-img-mobile" alt="share your saved link">
             <h5>여러 링크를 폴더에 담고 공유할 수 있습니다. 가족, 친구, 동료들에게 쉽고 빠르게 링크를 공유해 보세요.</h5>
           </div>
-          <img src="img-landing/img3.png" alt="share your saved link">
+          <img src="img-landing/img3.png" class="middle-section-content-img-pc" alt="share your saved link">
         </div>
         <div class="middle-section-content" id="middle-section-content-search">
           <div class="middle-section-content-title">
             <h2 id="search"><span>저장한 링크를 </span>검색<span>해 보세요</span></h2>
+            <img src="img-landing/img4.png" class="middle-section-content-img-mobile" alt="search the link you saved">
             <h5>중요한 정보들을 검색으로 쉽게 찾아보세요.</h5>
           </div>
-          <img src="img-landing/img4.png" alt="search the link you saved">
+          <img src="img-landing/img4.png" class="middle-section-content-img-pc" alt="search the link you saved">
         </div>
       </section>
     </main>
