Add 메타 태그와 오픈 그래프 태그를 추가, 타이틀을 수정

--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Linkbrary</title>
+
+  <meta name="description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요.">
+  <meta name="keywords" content="정보저장, 폴더관리, 링크저장, 링크 저장 공유">
+  <meta name="author" content="kimmiso">
+  <meta name="robots" content="index,nofollow">
+
+  <meta property="og:title" content="Linkbrary">
+  <meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요.">
+  <meta property="og:image" content="https://part1-kms-week.netlify.app/img/logo/logo_og.png">
+  <meta property="og:image:width" content="133">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://part1-kms-week.netlify.app/">
+
+  <meta name="twitter:title" content="Linkbrary">
+  <meta name="twitter:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요.">
+  <meta name="twitter:image" content="https://part1-kms-week.netlify.app/img/logo/logo_og.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://part1-kms-week.netlify.app/">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
