Edit footer mobileversion

--- a/main.html
+++ b/main.html
@@ -97,13 +97,13 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer-section">
-        <div class="footer-year">©codeit - 2023</div>
-        <div class="footer-main">
-          <a href="privacy.html">privacy Policy</a>
+      <div class="footer__section">
+        <div class="footer__year">©codeit - 2023</div>
+        <div class="footer__link">
+          <a href="privacy.html">Privacy Policy</a>
           <a href="faq.html">FAQ</a>
         </div>
-        <div class="footer-link">
+        <div class="footer__social">
           <a href="https://www.facebook.com/"
             ><img src="./img/facebook.svg" alt="Facebook" name="Facebook"
           /></a>
