feat: 모바일 반응형 구현

--- a/signup.html
+++ b/signup.html
@@ -1,62 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>singup</title>
-  <link rel="stylesheet" href="signupstyle.css">
-</head>
-<body>
-  <header class="topbox">
-    <a href="index.html">
-      <img class="logo" src="Linkbrary.png">
-    </a>
-    <div class="gotosignin">
-      <span id="signinask">이미 회원이신가요?</span>
-      <a class="signin" href="signin.html">로그인하기</a>
-    </div>
-  </header>
-  <main class="inputform">
-    <div class="getemail">
-      <form>
-        <label id="inputemail" for="signupemail">이메일</label>
-        <input id="signupemail" name="email" type="email">    
-      </form>
-    </div>
-    <div class="getpassword">
-      <form>
-        <label id="inputpassword" for="signuppassword">비밀번호</label>
-        <div class="passwordbox">
-          <input id="signuppassword" name="password" type="password">
-          <img class="eyevector" src="Vector.jpg">
-        </div>
-      </form>
-    </div>
-    <div class="getpasswordconfirmation">
-      <form>
-        <label id="inputpasswordconfirmation" for="passwordconfirmation">비밀번호확인</label>
-        <div class="passwordconfirmationbox">
-          <input id="passwordconfirmation" name="password" type="password">
-          <img class="eyevector" src="Vector.jpg">
-        </div>
-      </form>
-    </div>
-  </main>
-  <div class="entering">
-    <button class="entersignup">회원가입</button>
-  </div>
-  <footer class="anothersignup">
-    <div class="anothersignupmessage">
-      다른 방식으로 가입하기
-    </div>
-    <div class="anothersignupicon">
-      <a href="https://www.google.com/" target="_blank">
-        <img class="googleicon" src="google icon.png">
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>signin</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
+    />
+    <link rel="stylesheet" href="sign.css" />
+  </head>
+  <body>
+    <header>
+      <a class="logo-link" href="index.html">
+        <img class="header-logo" src="Linkbrary.svg"/>
       </a>
-      <a href="https://www.kakaocorp.com/page/">
-        <img class="kakaoicon" src="kakao icon.png">
-      </a>
+      <p class="header-message">
+        이미 회원이신가요?<a class="header-link" href="signin.html">로그인 하기</a>
+      </p>
+    </header>
+    <div class="signin-box">
+      <form class="signin-form">
+        <div class="signin-inputs">
+          <div class="signin-input-box">
+            <label class="signin-input-label">이메일</label>
+            <input class="signin-input" />
+          </div>
+          <div class="signin-input-box sign-password">
+            <label class="signin-input-label">비밀번호</label>
+            <input class="signin-input" type="password" />
+            <button class="eye-button" type="button">
+              <img src="Vector.jpg" />
+            </button>
+          </div>
+          <div class="signin-input-box sign-password">
+            <label class="signin-input-label">비밀번호 확인</label>
+            <input class="signin-input" type="password" />
+            <button class="eye-button" type="button">
+              <img src="Vector.jpg" />
+            </button>
+          </div>
+        </div>
+        <button class="cta" type="submit">회원가입</button>
+      </form>
+      <div class="sns-box">
+        <span class="sns-text">다른 방식으로 가입하기</span>
+        <div class="sns-links">
+          <a class="sns-link google-link" href="https://www.google.com/">
+            <img src="google icon.png" />
+          </a>
+          <a class="sns-link kakao-link" href="https://www.kakaocorp.com/page/">
+            <img src="kakao icon.png" />
+          </a>
+        </div>
+      </div>
     </div>
-  </footer>
-</body>
+  </body>
 </html>
