--- a/signin.html
+++ b/signin.html
@@ -1,49 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>singin</title>
-  <link rel="stylesheet" href="signinstyle.css">
-</head>
-<body>
-  <header class="topbox">
-    <a href="index.html">
-      <img class="logo" src="Linkbrary.png">
-    </a>
-    <div class="gotosignup">
-      <span id="signupask">회원이 아니신가요?</span>
-      <a class="signup" href="signup.html">회원 가입하기</a>
-    </div>
-  </header>
-  <main class="inputform">
-      <div class="getemail">
-        <label id="inputemail" for="signinemail">이메일</label>
-        <input id="signinemail" name="email" type="email">    
-      </div>
-    <div class="getpassword">
-      <label id="inputpassword" for="signinpassword">비밀번호</label>
-      <div class="passwordbox">
-        <input id="signinpassword" name="password" type="password">
-        <img class="eyevector" src="Vector.jpg">
-      </div>
-    </div>
-  </main>
-  <div class="entering">
-    <button class="entersignin">로그인</button>
-  </div>
-  <footer class="anothersignin">
-    <div class="sociallogin">
-      소셜로그인
-    </div>
-    <div class="anothersigninicon">
-      <a href="https://www.google.com/" target="_blank">
-        <img class="googleicon" src="google icon.png">
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>signin</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
+    />
+    <link rel="stylesheet" href="sign.css" />
+  </head>
+  <body>
+    <header>
+      <a class="logo-link" href="index.html">
+        <img class="header-logo" src="Linkbrary.svg"/>
       </a>
-      <a href="https://www.kakaocorp.com/page/">
-        <img class="kakaoicon" src="kakao icon.png">
-      </a>
+      <p class="header-message">
+        회원이 아니신가요?<a class="header-link" href="signup.html">회원 가입하기</a>
+      </p>
+    </header>
+    <div class="signin-box">
+      <form class="signin-form">
+        <div class="signin-inputs">
+          <div class="signin-input-box">
+            <label class="signin-input-label">이메일</label>
+            <input class="signin-input" />
+          </div>
+          <div class="signin-input-box sign-password">
+            <label class="signin-input-label">비밀번호</label>
+            <input class="signin-input" type="password" />
+            <button class="eye-button" type="button">
+              <img src="Vector.jpg" />
+            </button>
+          </div>
+        </div>
+        <button class="cta" type="submit">로그인</button>
+      </form>
+      <div class="sns-box">
+        <span class="sns-text">소셜 로그인</span>
+        <div class="sns-links">
+          <a class="sns-link google-link" href="https://www.google.com/">
+            <img src="google icon.png" />
+          </a>
+          <a class="sns-link kakao-link" href="https://www.kakaocorp.com/page/">
+            <img src="kakao icon.png" />
+          </a>
+        </div>
+      </div>
     </div>
-  </footer>
-</body>
+  </body>
 </html>
