--- a/textindex.html
+++ b/textindex.html
@@ -23,8 +23,8 @@
   <header>
       <div class="maincontents-heading">
         <h2 class="slogan">
-          <span id="maincontents-text-purple-to-pink">세상의 모든 정보</span>를<br>
-          쉽게 저장하고<br> 관리해보세요
+          <span id="maincontents-text-purple-to-pink">세상의 모든 정보</span>를 <br>
+          쉽게 저장하고 관리해보세요
         </h2>
       </div>
       <div class="maincontents-goto-signup">
@@ -39,42 +39,42 @@
   <article>
     <section>
       <h3 class="title">
-        <span id="textcolor-pink-to-blue">원하는 링크를</span>
+        <span id="textcolor-pink-to-blue">원하는 링크를</span><br>
         저장하세요
       </h3>
       <p class="section_text_discription">
-        나중에 읽고 싶은 글, 다시 보고 싶은 영상,
-        사고싶은 옷, 기억하고 싶은 모든 것을
+        나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br>
+        사고싶은 옷, 기억하고 싶은 모든 것을<br>
         한 공간에 저장하세요 
       </p>
       <img src="card.jpg" class="section_img-box-image">
     </section>
     <section>
       <h3 class="title">
-        링크를 폴더로
+        링크를 폴더로<br>
         <span id="textcolor-yellow-to-blue">관리</span>하세요
       </h3>
       <p class="section_text_discription">
-        나만의 폴더를 무제한으로 만들고
+        나만의 폴더를 무제한으로 만들고<br>
         다양하게 활용할 수 있습니다.
       </p>
       <img class="section_img-box-image" src="디스크립션 없는 팝업.jpg">
     </section>
     <section>
       <h3 class="title">
-        저장한 링크를
+        저장한 링크를<br>
         <span id="textcolor-purple-to-blue">공유</span>해 보세요
       </h3>
       <p class="section_text_discription">
-          여러 링크를 폴더에 담고 공유할 수 있습니다.
-          가족, 친구, 동료들에게 쉽고 빠르게 링크를
+          여러 링크를 폴더에 담고 공유할 수 있습니다.<br>
+          가족, 친구, 동료들에게 쉽고 빠르게 링크를<br>
           공유해 보세요.
       </p>
       <img class="section_img-box-image" src="img3.png">
     </section>
     <section>
       <h3 class="title">
-        저장한 링크를
+        저장한 링크를<br>
         <span id="textcolor-blue-to-purple">검색</span>해 보세요
       </h3>
       <p class="section_text_discription">
@@ -85,7 +85,7 @@
   </article>
   <footer>
     <div class="footerbox">
-      <span class="codeitlogo">©codeit - 2023</span>
+      <div class="codeitlogo">©codeit - 2023</div>
       <div class="info">
         <a href="/privacy">Privacy Policy</a>
         <a href="/faq">FAQ</a>
