--- a/main.html
+++ b/main.html
@@ -42,8 +42,8 @@
               저장하세요
             </h2>
             <div class="description">
-              나중에 읽고 싶은 글. 다시 보고싶은 영상.<br />
-              사고싶은 옷. 기억하고 싶은 모든 것을<br />
+              나중에 읽고 싶은 글. 다시 보고싶은 영상,<br class="media__br" />
+              사고싶은 옷, 기억하고 싶은 모든 것을<br />
               한 공간에 저장하세요.
             </div>
           </div>
