랜딩페이지 반응형 웹디자인 추가

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <header>
     <nav class="linkbrary-nav">
       <ul>
-        <li><a href="/"><img src="/icons/logo.svg" class="logo" alt="링크브러리 로고"></a></li>
-        <li><a href="/signin.html" class="signin-btn">로그인</a></li>
+        <li><a href="/"><img src="/icons/logo.svg" class="linkbrary-nav__logo" alt="링크브러리 로고"></a></li>
+        <li><a href="/signin.html" class="main-header__signin-btn">로그인</a></li>
       </ul>
     </nav>
   </header>
@@ -31,55 +31,53 @@
     <div class="main-header">
       <div class="main-header__card">
         <h1 class="main-header__title">
-        <span class="title-gradation">세상의 모든 정보</span>를</br>
-        쉽게 저장하고 관리해 보세요
+        <span class="main-header__title-gradation">세상의 모든 정보</span>를</br>
+        <div class="main-header__line-break">쉽게 저장하고</div> 관리해 보세요
         </h1>
-        <a href="/signup.html" class="signup-btn">링크 추가하기</a>
-        <div class="linkbrary-section__preview">
-          <img src="/images/_img.png" class="preview-img" alt="미리보기 사진">
-        </div>
+        <a href="/signup.html" class="main-header__signup-btn">링크 추가하기</a>
+        <img src="/images/_img.png" class="main-header__preview-img" alt="미리보기 사진">
       </div>
     </div>
     <section>
       <div class="section__wrap">
         <div class="section__card">
           <div class="section__frame">
-            <h1>
-              <span class="card-gradation-orange-to-blue">원하는 링크</span>를</br>
+            <h1 class="section__title">
+              <span class="section__gradation-orange-to-blue">원하는 링크</span>를
               저장하세요
             </h1>
-            <p>
+            <p class="section__description">
               나중에 읽고 싶은 글, 다시 보고 싶은 영상,
               사고 싶은 옷, 기억하고 싶은 모든 것을
               한 공간에 저장하세요.
             </p>
           </div>
-            <img src="/images/_img1.png" class="section__img" alt="링크저장하기">
+          <img src="/images/_img1.png" class="section__img" alt="링크저장하기">
         </div>
       </div>
       <div class="section__wrap">
-        <div class="section__card reverse">
-          <div class="section__frame">
-            <h1>
-            링크를 폴더로</br>
-            <span class="card-gradation-yellow-to-blue">관리</span>하세요
-            </h1>
-            <p>
-              나만의 폴더를 무제한으로 만들고 
-              다양하게 활용할 수 있습니다.
-            </p>
-          </div>
-          <img src="/images/img2.png" class="section__img" alt="폴더 이름 변경하기">
+        <div class="section__card">
+            <div class="section__frame">
+              <h1 class="section__title">
+              링크를 폴더로
+              <span class="section__gradation-yellow-to-blue">관리</span>하세요
+              </h1>
+              <p class="section__description">
+                나만의 폴더를 무제한으로 만들고 
+                다양하게 활용할 수 있습니다.
+              </p>
+            </div>
+            <img src="/images/img2.png" class="section__img" alt="폴더 이름 변경하기">
         </div>
       </div>
       <div class="section__wrap">
         <div class="section__card">
           <div class="section__frame">
-            <h1>
-              저장한 링크를</br>
-              <span class="card-gradation-blue">공유</span>해 보세요.
+            <h1 class="section__title">
+              저장한 링크를
+              <span class="section__gradation-blue">공유</span>해 보세요.
             </h1>
-            <p>
+            <p class="section__description">
               여러 링크를 폴더에 담고 공유할 수 있습니다. 가족, 친구, 동료들에게 쉽고 빠르게 링크를 
               공유해 보세요.
             </p>
@@ -88,14 +86,15 @@
         </div>
       </div>
       <div class="section__wrap">
-        <div class="section__card reverse">
+        <div class="section__card">
           <div class="section__frame">
-            <h1>
-              저장한 링크를</br>
-              <span class="card-gradation-sky">검색</span>해 보세요
+            <h1 class="section__title">
+              저장한 링크를
+              <span class="section__gradation-sky">검색</span>해 보세요
             </h1>
-            <p>중요한 정보들을 검색으로 쉽게 찾아보세요.
-            </p>
+            <p class="section__description">
+              중요한 정보들을 검색으로 쉽게 찾아보세요.
+            </p>  
           </div>
           <img src="/images/_img4.png" class="section__img" alt="저장한 링크 검색하기">
         </div>
@@ -105,12 +104,12 @@
   <footer>
     <div class="footer__wrap">
       <div class="footer__content">
-        <div class="history">©codeit - 2023</div>
-        <div class="support-link">
+        <div class="footer__history">©codeit - 2023</div>
+        <div class="footer__support-link">
           <a href="/privacy">Privacy Policy</a>
           <a href="/faq">FAQ</a>
         </div>
-        <div class="sns-link">
+        <div class="footer__sns-link">
           <a href="https://www.facebook.com/" target="__blank"><img src="./icons/akar-icons_facebook-fill.svg"alt="페이스북 바로가기"></a>
           <a href="https://twitter.com/?lang=ko"target="__blank"><img src="./icons/akar-icons_twitter-fill.svg" alt="트위터 바로가기"></a>
           <a href="https://www.youtube.com/"target="__blank" ><img src="./icons/akar-icons_youtube-fill.svg" alt="유튜브 바로가기"></a>
